feedparser/tests/illformed/encoding/.htaccess
<Files "http_i18n.xml">
    AddType text/xml .xml
</Files>
